--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>ru.alishev.springcourse</groupId>
+	<groupId>ru.slepnevkarelin.coursework</groupId>
 	<artifactId>FirstSecurityApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>FirstSecurityApp</name>
@@ -42,11 +42,6 @@
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
