--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
       <artifactId>spring-orm</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <version>2.6.2</version>
+    </dependency>
   </dependencies>
 
   <build>
