--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://meogol.myqnapcloud.com:3306/DBFinal?useUnicod
 spring.datasource.username=root
 spring.datasource.password=Megogol15
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-#spring.jpa.show-sql: true
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.show_sql=true
